--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <script src="./script.js"></script>
+    <div class="container">
+        <div id="grid" class="grid"></div>
+        <button id="sizeBtn">Изменить сетку</button>
+        <button id="clearBtn">Очистить</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
