--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div id="grid" class="grid"></div>
         <button id="sizeBtn">Изменить сетку</button>
         <button id="clearBtn">Очистить</button>
+        <button id="toggleColor">Переключить на RGB</button>
     </div>
     <script src="script.js"></script>
 </body>
