--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button id="sizeBtn">Изменить сетку</button>
         <button id="clearBtn">Очистить</button>
         <button id="toggleColor">Переключить на RGB</button>
+        <button id="eraserBtn">Ластик</button>
     </div>
     <script src="script.js"></script>
 </body>
