--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body>
     <div class="container">
@@ -13,7 +14,7 @@
         <button id="clearBtn">Очистить</button>
         <button id="toggleColor">Переключить на RGB</button>
         <button id="eraserBtn">Ластик</button>
-    </div>
+        </div>
     <script src="script.js"></script>
 </body>
 </html>
